<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical"
            tools:context=".ActivityMain">

            <ImageView
                android:id="@+id/activity_main_bicycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/bicycle1"
                android:scaleType="fitCenter" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/activity_main_vintage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_toLeftOf="@id/activity_main_like"
                    android:text="@string/bicycle"
                    android:textSize="@dimen/largeTextSize"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/activity_main_like"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/photo_height"
                    android:layout_alignParentEnd="true"
                    android:onClick="onLike"
                    android:src="@drawable/thumbsup1"/>

                <TextView
                    android:id="@+id/activity_main_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_below="@id/activity_main_vintage"
                    android:text="@string/color"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/activity_main_colorButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_color"
                    android:layout_margin="@dimen/layout_padding"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/button_gray"
                        android:padding="@dimen/button_padding"
                        android:background="@color/buttonGray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onColorClick" />

                    <RadioButton
                        android:id="@+id/button_brown"
                        android:padding="@dimen/button_padding"
                        android:background="@color/buttonBrown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onColorClick" />

                    <RadioButton
                        android:id="@+id/button_pink"
                        android:padding="@dimen/button_padding"
                        android:background="@color/buttonPink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onColorClick" />

                    <RadioButton
                        android:id="@+id/button_black"
                        android:padding="@dimen/button_padding"
                        android:background="@color/buttonBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onColorClick" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/activity_main_sizeButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_colorButtons"
                    android:layout_margin="@dimen/layout_padding"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/button_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/button_padding"
                        android:background="@drawable/myradiobutton"
                        android:onClick="onSizeClick"
                        android:text="@string/size_small" />

                    <RadioButton
                        android:id="@+id/button_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onSizeClick"
                        android:padding="@dimen/button_padding"
                        android:background="@drawable/myradiobutton"
                        android:text="@string/size_medium" />

                    <RadioButton
                        android:id="@+id/button_large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onSizeClick"
                        android:padding="@dimen/button_padding"
                        android:background="@drawable/myradiobutton"
                        android:text="@string/size_large" />

                    <RadioButton
                        android:id="@+id/button_xlarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/button_padding"
                        android:background="@drawable/myradiobutton"
                        android:onClick="onSizeClick"
                        android:text="@string/size_xl" />
                </RadioGroup>

                <TextView
                    android:id="@+id/activity_main_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_sizeButtons"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_main_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_description"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/description_body" />

                <TextView
                    android:id="@+id/activity_main_measurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_description_text"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/measurement"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activty_main_measurement_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_main_measurement"
                    android:layout_margin="@dimen/layout_padding"
                    android:text="@string/measurement_body" />

                <Button
                    android:id="@+id/activity_main_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/addbutton"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/activty_main_measurement_text"
                    android:layout_marginTop="@dimen/activity_vertical_margin"

                    android:padding="@dimen/layout_padding"
                    android:onClick="addToCart"
                    android:text="@string/button_add" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>